adding 2 cool af buttons

--- a/portfolio-site-ui/src/components/form/Navbar.css
+++ b/portfolio-site-ui/src/components/form/Navbar.css
@@ -1,6 +1,6 @@
 .nav {
   background-color: #333;
-  color: wheat;
+  color: rgb(244, 235, 204);;
   display: flex;
   justify-content: space-between;
   align-items: stretch;
