--- a/portfolio-site-ui/src/App.css
+++ b/portfolio-site-ui/src/App.css
@@ -1,8 +1,9 @@
 .appContainer {
-  margin-left: 9px;
+  /* margin-left: 9px; */
   background: url("./assets/background.png");
   background-size: 100% 100%;
-  width: 94rem;
+  width: 100%;
   height: 100%;
+  min-height: 100vh;
   color: rgb(244, 235, 204);
 }
