--- a/portfolio-site-ui/src/components/form/Navbar.css
+++ b/portfolio-site-ui/src/components/form/Navbar.css
@@ -1,13 +1,13 @@
 .nav {
   background-color: #333;
-  color: rgb(244, 235, 204);;
+  color: rgb(244, 235, 208);
   display: flex;
   justify-content: space-between;
   align-items: stretch;
   gap: 2rem;
   padding: 0 1rem;
   height: 3rem;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
 }
 
 a {
@@ -16,7 +16,7 @@ a {
   height: 100%;
   display: flex;
   align-items: center;
-  padding: .25rem;
+  padding: 0.25rem;
 }
 
 ul {
